# uiina

./: README.md.bak  README.org  flake.nix  package.nix  pyproject.toml  uiina.py
.github/workflows/: build.yml
ci_scripts/: prepare-release.sh
uiina/: __init__.py  uiina.py
